syntax = "proto3";

package api.centrifugo.v1;

option php_namespace = "Spiral\\Shared\\Services\\Centrifugo\\v1";
option php_metadata_namespace = "Spiral\\Shared\\Services\\Centrifugo\\v1\\GPBMetadata";

import "api/centrifugo/v1/message.proto";

service CentrifugoService {
    rpc Publish (api.centrifugo.v1.dto.PublishRequest) returns (api.centrifugo.v1.dto.PublishResponse) {}
    rpc Broadcast (api.centrifugo.v1.dto.BroadcastRequest) returns (api.centrifugo.v1.dto.BroadcastResponse) {}
    rpc Subscribe (api.centrifugo.v1.dto.SubscribeRequest) returns (api.centrifugo.v1.dto.SubscribeResponse) {}
    rpc Unsubscribe (api.centrifugo.v1.dto.UnsubscribeRequest) returns (api.centrifugo.v1.dto.UnsubscribeResponse) {}
    rpc Disconnect (api.centrifugo.v1.dto.DisconnectRequest) returns (api.centrifugo.v1.dto.DisconnectResponse) {}
    rpc Presence (api.centrifugo.v1.dto.PresenceRequest) returns (api.centrifugo.v1.dto.PresenceResponse) {}
    rpc PresenceStats (api.centrifugo.v1.dto.PresenceStatsRequest) returns (api.centrifugo.v1.dto.PresenceStatsResponse) {}
    rpc History (api.centrifugo.v1.dto.HistoryRequest) returns (api.centrifugo.v1.dto.HistoryResponse) {}
    rpc HistoryRemove (api.centrifugo.v1.dto.HistoryRemoveRequest) returns (api.centrifugo.v1.dto.HistoryRemoveResponse) {}
    rpc Info (api.centrifugo.v1.dto.InfoRequest) returns (api.centrifugo.v1.dto.InfoResponse) {}
    rpc RPC (api.centrifugo.v1.dto.RPCRequest) returns (api.centrifugo.v1.dto.RPCResponse) {}
    rpc Refresh (api.centrifugo.v1.dto.RefreshRequest) returns (api.centrifugo.v1.dto.RefreshResponse) {}
    rpc Channels (api.centrifugo.v1.dto.ChannelsRequest) returns (api.centrifugo.v1.dto.ChannelsResponse) {}
    rpc Connections (api.centrifugo.v1.dto.ConnectionsRequest) returns (api.centrifugo.v1.dto.ConnectionsResponse) {}
    rpc UpdateUserStatus (api.centrifugo.v1.dto.UpdateUserStatusRequest) returns (api.centrifugo.v1.dto.UpdateUserStatusResponse) {}
    rpc GetUserStatus (api.centrifugo.v1.dto.GetUserStatusRequest) returns (api.centrifugo.v1.dto.GetUserStatusResponse) {}
    rpc DeleteUserStatus (api.centrifugo.v1.dto.DeleteUserStatusRequest) returns (api.centrifugo.v1.dto.DeleteUserStatusResponse) {}
    rpc BlockUser (api.centrifugo.v1.dto.BlockUserRequest) returns (api.centrifugo.v1.dto.BlockUserResponse) {}
    rpc UnblockUser (api.centrifugo.v1.dto.UnblockUserRequest) returns (api.centrifugo.v1.dto.UnblockUserResponse) {}
    rpc RevokeToken (api.centrifugo.v1.dto.RevokeTokenRequest) returns (api.centrifugo.v1.dto.RevokeTokenResponse) {}
    rpc InvalidateUserTokens (api.centrifugo.v1.dto.InvalidateUserTokensRequest) returns (api.centrifugo.v1.dto.InvalidateUserTokensResponse) {}
}
